fix overflow-x

--- a/Firefly Web Studio/css/style.css
+++ b/Firefly Web Studio/css/style.css
@@ -26,6 +26,7 @@ body {
     height: 100%;
     font-family: Helvetica, 'Arimo';
     font-weight: 700;
+    overflow-x: hidden;
 }
 
 h1, h2 {
